data/tests/typer_error/poly_checking/invalid/test2.spl
fun(a, b, c, d) :: a Int a Char -> Bool {
    return a == c && b == d;
}